Queueify the queue and make fullbright smooth both ways