@@ -17,16 +17,48 @@
  */
 package bleach.hack.utils;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.ArrayDeque;
+import java.util.Deque;
+import java.util.HashMap;
+import java.util.Map.Entry;
 
 public class BleachQueue {
 
-	public static List<Runnable> queue = new ArrayList<>();
+	private static HashMap<String, Deque<Runnable>> specialQueues = new HashMap<>();
+	
+	private static Deque<Runnable> queue = new ArrayDeque<>();
+	
+	public static void add(Runnable runnable) {
+		queue.add(runnable);
+	}
+	
+	public static void add(String id, Runnable runnable) {
+		if (!specialQueues.containsKey(id)) {
+			specialQueues.put(id, new ArrayDeque<>());
+		}
+		
+		specialQueues.get(id).add(runnable);
+	}
+	
+	public static void cancelQueue(String id) {
+		specialQueues.remove(id);
+	}
 	
 	public static void nextQueue() {
-		if (queue.isEmpty()) return;
-		if (queue.get(0) != null) queue.get(0).run();
-		queue.remove(0);
+		if (!queue.isEmpty()) {
+			if (queue.getFirst() != null) queue.poll().run();
+			else queue.poll();
+		}
+		
+		for (Entry<String, Deque<Runnable>> e: new HashMap<>(specialQueues).entrySet()) {
+			Deque<Runnable> deque = specialQueues.get(e.getKey());
+			
+			if (deque.getFirst() != null) deque.poll().run();
+			else deque.poll();
+			
+			if (deque.isEmpty()) {
+				specialQueues.remove(e.getKey());
+			}
+		}
 	}
 }
